# F-StudySolo-Dev

./: .gitignore  LICENSE  README.md  WORKFLOW_NODE_LONG_TASK_REMAINING.md  workflow-connection-redesign.md
.agent/: ARCHITECTURE.md
.github/: ABOUT.md  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  refactor.md  task.md
.github/scripts/: setup-labels.ps1
agents/: README.md
agents/code-review-agent/: .env.example  README.md
agents/visual-site-agent/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/visual-site-agent/src/: __init__.py  config.py  logging_utils.py  main.py  rate_limit.py  router.py
agents/visual-site-agent/src/core/: agent.py  ai_understanding.py  planning.py  types.py  understanding.py  upstream_planning.py
agents/visual-site-agent/src/endpoints/: completions.py  models.py
agents/visual-site-agent/src/middleware/: auth.py
agents/visual-site-agent/src/schemas/: request.py
agents/visual-site-agent/tests/: conftest.py  test_ai_understanding.py  test_contract.py  test_upstream_planning.py  test_visual_logic.py
backend/: .env.example  config.yaml  requirements.txt
backend/app/: main.py
docs/: README.md  api.md  architecture.md  naming.md
frontend/: README.md  next.config.ts  package.json  ts_out.txt
introduce/: index.html  package.json  vite.config.ts
scripts/: README.md  nginx.conf  start-studysolo.ps1  start-studysolo.sh
supabase/: .gitignore
wiki/: README.md
(+618 files in other folders)
